# api-currency

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py  urls.py
app/currency/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
app/currency/migrations/: 0001_initial.py  0002_alter_userrequest_options.py
scripts/: run.sh
