[tool.poetry]
name = "api-currency"
version = "0.1.0"
description = ""
authors = ["kolaxy <vybornoff@outlook.com>"]
readme = "README.md"
packages = [{include = "api_currency"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
