[tool.poetry]
name = "api-currency"
version = "0.1.0"
description = ""
authors = ["kolaxy <vybornoff@outlook.com>"]
readme = "README.md"
packages = [{include = "api_currency"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.1"
django = "^5.0.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-ratelimit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
